<resources>
    <string name="app_name">SharedPrefsApp</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_roll_no">Enter your roll no</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="select_one">Select One</string>
</resources>